--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,5 @@
 {
-  "development": {
-    "database": "horses_dev",
-    "host": "127.0.0.1",
-    "dialect": "postgres",
-    "operatorAliases": false
+  "production": {
+    "use_env_variable": "DATABASE_URL"
   }
 }
