--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,9 @@
 {
   "production": {
-    "use_env_variable": "DATABASE_URL"
-  }
+    "use_env_variable": "DATABASE_URL",
+    "ssl": {
+    "require": true,
+    "rejectUnauthorized": false
+    }
+}
 }
