--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,11 @@
 {
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialectOptions": { "ssl": true }
-  }
+    "dialectOptions": { 
+      "ssl": {
+        "require": true, 
+        "rejectUnauthorized": false
+      }
+    }
+  }  
 }
